Fix Bug 366652 - Drag and drop attachments in Kmail has stopped working

Fix Bug 368378 - Regression in kMail 5.3.x: Drag and drop of attachments from a received mail into the composer does not work any more

FIXED-IN: 5.4.0
BUG: 366652
BUG: 368378